--- a/.gitignore
+++ b/.gitignore
@@ -77,10 +77,14 @@ dist
 # Serverless directories
 .serverless
 
-# IDE
+# IDE / Editor
 .idea
-.vscode
-.zip
 
 # Service worker
 sw.*
+
+# Mac OSX
+.DS_Store
+
+# Vim swap files
+*.swp
