--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "fengying",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
-    "sit": "cross-env NODE_ENV=testing nodemon server/index.js --watch server",
-    "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "dev": "cross-env NODE_ENV=development PORT=8080 nodemon server/index.js --watch server",
+    "buildSit": "cross-env BUILD_ENV=sit nuxt build",
+    "build": "cross-env BUILD_ENV=prod nuxt build",
+    "start": "cross-env NODE_ENV=production PORT=8080 node server/index.js",
     "generate": "nuxt generate"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
     "koa": "^2.6.2",
+    "koa-favicon": "^2.0.1",
     "nprogress": "^0.2.0",
     "nuxt": "^2.0.0"
   },
